--- a/measuring.ui
+++ b/measuring.ui
@@ -16,10 +16,10 @@
   <widget class="QLabel" name="imgNormal">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>40</y>
-     <width>480</width>
-     <height>480</height>
+     <x>0</x>
+     <y>0</y>
+     <width>201</width>
+     <height>131</height>
     </rect>
    </property>
    <property name="text">
@@ -74,6 +74,19 @@
      </widget>
     </item>
    </layout>
+  </widget>
+  <widget class="QPushButton" name="showmPix">
+   <property name="geometry">
+    <rect>
+     <x>190</x>
+     <y>580</y>
+     <width>75</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>showMPix</string>
+   </property>
   </widget>
   <widget class="QWidget" name="">
    <property name="geometry">
