--- a/measuring.ui
+++ b/measuring.ui
@@ -6,18 +6,18 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1212</width>
-    <height>717</height>
+    <width>1163</width>
+    <height>612</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>measuring</string>
   </property>
-  <widget class="QLabel" name="imgNormal">
+  <widget class="QLabel" name="imgShow">
    <property name="geometry">
     <rect>
-     <x>0</x>
-     <y>0</y>
+     <x>40</x>
+     <y>40</y>
      <width>201</width>
      <height>131</height>
     </rect>
@@ -29,21 +29,21 @@
   <widget class="QPushButton" name="showImg">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>580</y>
+     <x>130</x>
+     <y>480</y>
      <width>75</width>
      <height>23</height>
     </rect>
    </property>
    <property name="text">
-    <string>PushButton</string>
+    <string>Select Image</string>
    </property>
   </widget>
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>580</x>
-     <y>600</y>
+     <x>910</x>
+     <y>570</y>
      <width>241</width>
      <height>35</height>
     </rect>
@@ -75,24 +75,24 @@
     </item>
    </layout>
   </widget>
-  <widget class="QPushButton" name="showmPix">
+  <widget class="QPushButton" name="showGraph">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>580</y>
+     <x>250</x>
+     <y>480</y>
      <width>75</width>
      <height>23</height>
     </rect>
    </property>
    <property name="text">
-    <string>showMPix</string>
+    <string>Graph</string>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>580</x>
-     <y>560</y>
+     <x>590</x>
+     <y>570</y>
      <width>236</width>
      <height>35</height>
     </rect>
@@ -124,8 +124,48 @@
     </item>
    </layout>
   </widget>
+  <widget class="QSlider" name="smoothSlider">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>670</x>
+     <y>400</y>
+     <width>341</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="minimum">
+    <number>1</number>
+   </property>
+   <property name="maximum">
+    <number>50</number>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
+   </property>
+  </widget>
+  <widget class="QCustomPlot" name="customPlot" native="true">
+   <property name="geometry">
+    <rect>
+     <x>560</x>
+     <y>40</y>
+     <width>571</width>
+     <height>331</height>
+    </rect>
+   </property>
+  </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
+ <customwidgets>
+  <customwidget>
+   <class>QCustomPlot</class>
+   <extends>QWidget</extends>
+   <header>qcustomplot.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
