--- a/measuring.ui
+++ b/measuring.ui
@@ -32,8 +32,8 @@
   <widget class="QPushButton" name="showImg">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>480</y>
+     <x>40</x>
+     <y>380</y>
      <width>75</width>
      <height>23</height>
     </rect>
@@ -84,8 +84,8 @@
    </property>
    <property name="geometry">
     <rect>
-     <x>250</x>
-     <y>480</y>
+     <x>160</x>
+     <y>380</y>
      <width>75</width>
      <height>23</height>
     </rect>
@@ -144,7 +144,7 @@
    <property name="geometry">
     <rect>
      <x>560</x>
-     <y>400</y>
+     <y>390</y>
      <width>64</width>
      <height>23</height>
     </rect>
@@ -162,7 +162,7 @@
    <property name="geometry">
     <rect>
      <x>561</x>
-     <y>441</y>
+     <y>421</y>
      <width>91</width>
      <height>23</height>
     </rect>
@@ -176,11 +176,11 @@
     <string>Amplitude</string>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>670</x>
-     <y>400</y>
+     <y>390</y>
      <width>411</width>
      <height>24</height>
     </rect>
@@ -204,6 +204,13 @@
     </item>
     <item>
      <widget class="QLabel" name="smooth_value">
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
       <property name="text">
        <string/>
       </property>
@@ -211,11 +218,11 @@
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>670</x>
-     <y>440</y>
+     <y>420</y>
      <width>411</width>
      <height>24</height>
     </rect>
@@ -227,7 +234,112 @@
        <bool>false</bool>
       </property>
       <property name="minimum">
-       <number>10</number>
+       <number>12</number>
+      </property>
+      <property name="maximum">
+       <number>50</number>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLabel" name="amplitude_value">
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>980</x>
+     <y>460</y>
+     <width>131</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>14</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Offset Distanct</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_5">
+   <property name="geometry">
+    <rect>
+     <x>980</x>
+     <y>490</y>
+     <width>131</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>14</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Offset Number</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="resultLine">
+   <property name="geometry">
+    <rect>
+     <x>560</x>
+     <y>520</y>
+     <width>541</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Result Line</string>
+   </property>
+  </widget>
+  <widget class="QWidget" name="">
+   <property name="geometry">
+    <rect>
+     <x>560</x>
+     <y>460</y>
+     <width>411</width>
+     <height>24</height>
+    </rect>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout_5">
+    <item>
+     <widget class="QLabel" name="offset_disL">
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QSlider" name="offsetVal">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
+      <property name="minimum">
+       <number>5</number>
       </property>
       <property name="maximum">
        <number>20</number>
@@ -237,10 +349,45 @@
       </property>
      </widget>
     </item>
+   </layout>
+  </widget>
+  <widget class="QWidget" name="">
+   <property name="geometry">
+    <rect>
+     <x>560</x>
+     <y>490</y>
+     <width>411</width>
+     <height>24</height>
+    </rect>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout_6">
     <item>
-     <widget class="QLabel" name="label">
+     <widget class="QLabel" name="offset_numL">
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
       <property name="text">
        <string/>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QSlider" name="offsetNum">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
+      <property name="minimum">
+       <number>0</number>
+      </property>
+      <property name="maximum">
+       <number>20</number>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
       </property>
      </widget>
     </item>
@@ -269,15 +416,15 @@
      <y>413</y>
     </hint>
     <hint type="destinationlabel">
-     <x>1130</x>
-     <y>415</y>
+     <x>1079</x>
+     <y>416</y>
     </hint>
    </hints>
   </connection>
   <connection>
    <sender>amplitudeSlider</sender>
    <signal>valueChanged(int)</signal>
-   <receiver>label</receiver>
+   <receiver>amplitude_value</receiver>
    <slot>setNum(int)</slot>
    <hints>
     <hint type="sourcelabel">
@@ -285,8 +432,40 @@
      <y>451</y>
     </hint>
     <hint type="destinationlabel">
-     <x>1113</x>
-     <y>454</y>
+     <x>1079</x>
+     <y>455</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>offsetNum</sender>
+   <signal>valueChanged(int)</signal>
+   <receiver>offset_numL</receiver>
+   <slot>setNum(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>658</x>
+     <y>512</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>573</x>
+     <y>517</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>offsetVal</sender>
+   <signal>valueChanged(int)</signal>
+   <receiver>offset_disL</receiver>
+   <slot>setNum(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>739</x>
+     <y>493</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>578</x>
+     <y>492</y>
     </hint>
    </hints>
   </connection>
