--- a/measuring.ui
+++ b/measuring.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1163</width>
-    <height>612</height>
+    <width>1179</width>
+    <height>715</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,10 +16,10 @@
   <widget class="QLabel" name="imgShow">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>40</y>
+     <x>20</x>
+     <y>150</y>
      <width>521</width>
-     <height>331</height>
+     <height>401</height>
     </rect>
    </property>
    <property name="lineWidth">
@@ -32,8 +32,8 @@
   <widget class="QPushButton" name="showImg">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>380</y>
+     <x>110</x>
+     <y>70</y>
      <width>75</width>
      <height>23</height>
     </rect>
@@ -45,8 +45,8 @@
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>910</x>
-     <y>570</y>
+     <x>290</x>
+     <y>630</y>
      <width>241</width>
      <height>35</height>
     </rect>
@@ -84,8 +84,8 @@
    </property>
    <property name="geometry">
     <rect>
-     <x>160</x>
-     <y>380</y>
+     <x>240</x>
+     <y>560</y>
      <width>75</width>
      <height>23</height>
     </rect>
@@ -97,8 +97,8 @@
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>590</x>
-     <y>570</y>
+     <x>30</x>
+     <y>630</y>
      <width>236</width>
      <height>35</height>
     </rect>
@@ -143,8 +143,8 @@
   <widget class="QLabel" name="Smooth">
    <property name="geometry">
     <rect>
-     <x>560</x>
-     <y>390</y>
+     <x>570</x>
+     <y>380</y>
      <width>64</width>
      <height>23</height>
     </rect>
@@ -161,8 +161,8 @@
   <widget class="QLabel" name="Ampitude">
    <property name="geometry">
     <rect>
-     <x>561</x>
-     <y>421</y>
+     <x>571</x>
+     <y>411</y>
      <width>91</width>
      <height>23</height>
     </rect>
@@ -179,8 +179,8 @@
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>670</x>
-     <y>390</y>
+     <x>680</x>
+     <y>380</y>
      <width>411</width>
      <height>24</height>
     </rect>
@@ -221,8 +221,8 @@
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>670</x>
-     <y>420</y>
+     <x>680</x>
+     <y>410</y>
      <width>411</width>
      <height>24</height>
     </rect>
@@ -260,138 +260,339 @@
     </item>
    </layout>
   </widget>
-  <widget class="QLabel" name="label_3">
+  <widget class="QGroupBox" name="Operation">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="geometry">
     <rect>
-     <x>980</x>
-     <y>460</y>
+     <x>230</x>
+     <y>20</y>
      <width>131</width>
-     <height>21</height>
+     <height>111</height>
     </rect>
    </property>
-   <property name="font">
-    <font>
-     <pointsize>14</pointsize>
-    </font>
+   <property name="title">
+    <string>Select Operation</string>
    </property>
-   <property name="text">
-    <string>Offset Distanct</string>
-   </property>
+   <widget class="QRadioButton" name="line_operation">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>30</y>
+      <width>61</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Linear</string>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="circle_operation">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>70</y>
+      <width>82</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Circle</string>
+    </property>
+   </widget>
   </widget>
-  <widget class="QLabel" name="label_5">
+  <widget class="QGroupBox" name="circle_setting">
    <property name="geometry">
     <rect>
-     <x>980</x>
-     <y>490</y>
-     <width>131</width>
-     <height>21</height>
+     <x>550</x>
+     <y>560</y>
+     <width>591</width>
+     <height>121</height>
     </rect>
    </property>
-   <property name="font">
-    <font>
-     <pointsize>14</pointsize>
-    </font>
+   <property name="title">
+    <string>Circle_setting</string>
    </property>
-   <property name="text">
-    <string>Offset Number</string>
-   </property>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>440</x>
+      <y>20</y>
+      <width>131</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>14</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Offset Degrees</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_6">
+    <property name="geometry">
+     <rect>
+      <x>440</x>
+      <y>50</y>
+      <width>131</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>14</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Offset Number</string>
+    </property>
+   </widget>
+   <widget class="QWidget" name="layoutWidget_2">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>20</y>
+      <width>411</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <layout class="QHBoxLayout" name="horizontalLayout_7">
+     <item>
+      <widget class="QLabel" name="circle_offset_radL">
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QSlider" name="circle_offsetDeg">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
+       <property name="minimum">
+        <number>1</number>
+       </property>
+       <property name="maximum">
+        <number>180</number>
+       </property>
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QWidget" name="layoutWidget_3">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>50</y>
+      <width>411</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <layout class="QHBoxLayout" name="horizontalLayout_8">
+     <item>
+      <widget class="QLabel" name="circle_offset_numL">
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QSlider" name="circle_offsetNum">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
+       <property name="minimum">
+        <number>0</number>
+       </property>
+       <property name="maximum">
+        <number>180</number>
+       </property>
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QPushButton" name="resultCircle">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>80</y>
+      <width>541</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Result Circle</string>
+    </property>
+   </widget>
   </widget>
-  <widget class="QPushButton" name="resultLine">
+  <widget class="QGroupBox" name="line_setting">
    <property name="geometry">
     <rect>
-     <x>560</x>
-     <y>520</y>
-     <width>541</width>
-     <height>31</height>
+     <x>550</x>
+     <y>440</y>
+     <width>591</width>
+     <height>121</height>
     </rect>
    </property>
-   <property name="text">
-    <string>Result Line</string>
+   <property name="title">
+    <string>Line_setting</string>
    </property>
-  </widget>
-  <widget class="QWidget" name="">
-   <property name="geometry">
-    <rect>
-     <x>560</x>
-     <y>460</y>
-     <width>411</width>
-     <height>24</height>
-    </rect>
-   </property>
-   <layout class="QHBoxLayout" name="horizontalLayout_5">
-    <item>
-     <widget class="QLabel" name="offset_disL">
-      <property name="font">
-       <font>
-        <pointsize>10</pointsize>
-        <weight>75</weight>
-        <bold>true</bold>
-       </font>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QSlider" name="offsetVal">
-      <property name="enabled">
-       <bool>false</bool>
-      </property>
-      <property name="minimum">
-       <number>5</number>
-      </property>
-      <property name="maximum">
-       <number>20</number>
-      </property>
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-     </widget>
-    </item>
-   </layout>
-  </widget>
-  <widget class="QWidget" name="">
-   <property name="geometry">
-    <rect>
-     <x>560</x>
-     <y>490</y>
-     <width>411</width>
-     <height>24</height>
-    </rect>
-   </property>
-   <layout class="QHBoxLayout" name="horizontalLayout_6">
-    <item>
-     <widget class="QLabel" name="offset_numL">
-      <property name="font">
-       <font>
-        <pointsize>10</pointsize>
-        <weight>75</weight>
-        <bold>true</bold>
-       </font>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QSlider" name="offsetNum">
-      <property name="enabled">
-       <bool>false</bool>
-      </property>
-      <property name="minimum">
-       <number>0</number>
-      </property>
-      <property name="maximum">
-       <number>20</number>
-      </property>
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-     </widget>
-    </item>
-   </layout>
+   <widget class="QPushButton" name="resultLine">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>80</y>
+      <width>541</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Result Line</string>
+    </property>
+   </widget>
+   <widget class="QWidget" name="">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>50</y>
+      <width>411</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <layout class="QHBoxLayout" name="horizontalLayout_6">
+     <item>
+      <widget class="QLabel" name="offset_numL">
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QSlider" name="offsetNum">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+       <property name="minimum">
+        <number>0</number>
+       </property>
+       <property name="maximum">
+        <number>20</number>
+       </property>
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QWidget" name="">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>20</y>
+      <width>411</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <layout class="QHBoxLayout" name="horizontalLayout_5">
+     <item>
+      <widget class="QLabel" name="offset_disL">
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QSlider" name="offsetVal">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+       <property name="minimum">
+        <number>5</number>
+       </property>
+       <property name="maximum">
+        <number>20</number>
+       </property>
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QLabel" name="label_5">
+    <property name="geometry">
+     <rect>
+      <x>440</x>
+      <y>50</y>
+      <width>131</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>14</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Offset Number</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_3">
+    <property name="geometry">
+     <rect>
+      <x>440</x>
+      <y>20</y>
+      <width>131</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>14</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Offset Distanct</string>
+    </property>
+   </widget>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
@@ -412,12 +613,12 @@
    <slot>setNum(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>989</x>
-     <y>413</y>
+     <x>999</x>
+     <y>393</y>
     </hint>
     <hint type="destinationlabel">
-     <x>1079</x>
-     <y>416</y>
+     <x>1089</x>
+     <y>396</y>
     </hint>
    </hints>
   </connection>
@@ -428,12 +629,12 @@
    <slot>setNum(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>987</x>
-     <y>451</y>
+     <x>997</x>
+     <y>431</y>
     </hint>
     <hint type="destinationlabel">
-     <x>1079</x>
-     <y>455</y>
+     <x>1089</x>
+     <y>435</y>
     </hint>
    </hints>
   </connection>
@@ -448,8 +649,8 @@
      <y>512</y>
     </hint>
     <hint type="destinationlabel">
-     <x>573</x>
-     <y>517</y>
+     <x>574</x>
+     <y>498</y>
     </hint>
    </hints>
   </connection>
@@ -460,12 +661,44 @@
    <slot>setNum(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>739</x>
-     <y>493</y>
+     <x>733</x>
+     <y>474</y>
     </hint>
     <hint type="destinationlabel">
-     <x>578</x>
-     <y>492</y>
+     <x>577</x>
+     <y>473</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>circle_offsetDeg</sender>
+   <signal>valueChanged(int)</signal>
+   <receiver>circle_offset_radL</receiver>
+   <slot>setNum(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>627</x>
+     <y>587</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>576</x>
+     <y>590</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>circle_offsetNum</sender>
+   <signal>valueChanged(int)</signal>
+   <receiver>circle_offset_numL</receiver>
+   <slot>setNum(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>683</x>
+     <y>620</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>577</x>
+     <y>621</y>
     </hint>
    </hints>
   </connection>
